# tic-tac-toe

./: .gitignore  LICENSE  README.md  ReadMe.txt  board.py  main.py  minimax.py  pyproject.toml  settings.py  setup.py  test-matplotlib.py  tiles.py
models/: __init__.py  axiomatic.py  mc_data.py  models.py  monte_carlo.py  random.py  simple_random.py
src/: main.py  player.py  settings.py  tictactoe.py
src/models/: __init__.py  machine-learning.py  mc_board.py  mc_stats.py  model_random.py  monte_carlo.py
ttt/: __init__.py  info.py  main.py  tictactoe.py
ttt/images/: __init__.py  icon_maker.py
ttt/models/: __init__.py  mathematical.py  model_minimax.py  model_random.py
ttt/models/minimax/: __init__.py  minimax.py  mm_board.py  mm_data.py
ttt/models/monte_carlo/: __init__.py  mc_stats.py  monte_carlo.py
